# api/v1/openapi.yaml
@@ -51,6 +51,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '504':
+          description: "Gateway Timeout"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/auth/login:
     post:
       summary: "Method to login"
@@ -97,6 +103,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '504':
+          description: "Gateway Timeout"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/auth/me:
     get:
       summary: "Secured method to get information about user"
@@ -118,6 +130,12 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         '500':
           description: "Internal Server Error"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '504':
+          description: "Gateway Timeout"
           content:
             application/json:
               schema:
@@ -153,6 +171,12 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         '500':
           description: "Internal Server Error"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '504':
+          description: "Gateway Timeout"
           content:
             application/json:
               schema:
@@ -193,6 +217,12 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         '500':
           description: "Internal Server Error"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '504':
+          description: "Gateway Timeout"
           content:
             application/json:
               schema:
